@@ -21,7 +21,8 @@ public class ConfigFileDao implements SedaSummaryRngGeneratorDaoInterface {
 	// ERRORS
 	private static final String ERROR_CONFIG_NULL = "La configuration est nulle.";
 	private static final String ERROR_ACCORD_NOT_FOUND_1 = "Impossible de trouver l'accord de versement '";
-	private static final String ERROR_ACCORD_NOT_FOUND_2 = "' dans la configuration";
+	private static final String ERROR_ACCORD_NOT_FOUND_2 = "' pour le serveur '";
+	private static final String ERROR_ACCORD_NOT_FOUND_3 = "' dans la configuration";
 
 	private static final String FORMAT_DATE_ID_TRANSFER = "yyyy-MM-dd'T'HH:mm:ss.SSSSSSS'Z'";
 	private static final String SEPARATOR_TRANFER_ID = "@";
@@ -75,7 +76,11 @@ public class ConfigFileDao implements SedaSummaryRngGeneratorDaoInterface {
 
 		} else {
 			StringBuilder errorMessage = new StringBuilder();
-			errorMessage.append(ERROR_ACCORD_NOT_FOUND_1).append(accordVersement).append(ERROR_ACCORD_NOT_FOUND_2);
+			errorMessage.append(ERROR_ACCORD_NOT_FOUND_1)
+				.append(accordVersement)
+				.append(ERROR_ACCORD_NOT_FOUND_2)
+				.append(baseURI)
+				.append(ERROR_ACCORD_NOT_FOUND_3);
 			throw new TechnicalException(errorMessage.toString());
 		}
 
